# rust-persist

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
benches/: bench.rs  criterion.rs  iai.rs
examples/: billion.rs  textdb.rs
src/: compress.rs  index.rs  iter.rs  lib.rs  memmngr.rs  mmap.rs  mmap_io.rs  msgpack.rs  resize.rs  table.rs  tests.rs
