[package]
name = "rust-persist"
version = "0.5.0"
authors = ["Dennis Schwerdel <schwerdel@googlemail.com>"]
description = "Persistent storage for Rust"
edition = "2018"

[dev-dependencies]
tempfile = "3"
rand = "^0.8.4"
rand_chacha = "^0.3.1"

[dependencies]
memmap = "^0.7"
safemem = "^0.3.3"
serde = {version = "1", optional = true}
rmp-serde = {version = "^0.15.5", optional = true}

[features]
default = ["msgpack"]
bench = []
msgpack = ["serde", "rmp-serde"]