[package]
name = "rust-persist"
version = "0.5.0"
authors = ["Dennis Schwerdel <schwerdel@googlemail.com>"]
description = "Persistent storage for Rust"
edition = "2018"

[lib]
crate-type = ["lib"]

[dev-dependencies]
tempfile = "3"
rand = "^0.8.4"
rand_chacha = "^0.3.1"
criterion = "^0.3.5"

[dependencies]
memmap = "^0.7"
fs2 = "^0.4.3"
safemem = "^0.3.3"
siphasher = "^0.3.7"
serde = {version = "1", optional = true}
rmp-serde = {version = "^0.15.5", optional = true}

[features]
default = ["msgpack"]
msgpack = ["serde", "rmp-serde"]

[[bench]]
name = "bench"
harness = false